# washing-machine-alerter

./: Dockerfile  README.md  env.list  pyproject.toml
.github/workflows/: docker-image.yml
washing_machine_alerter/: main.py
